[package]
name = "vns"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Emad (hulxxv@gmail.com)"]
description = "Server for vnStat network traffic monitor"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace] 
members = [
    "vnsd",
    "libs/libvnstat",
    "libs/utils",
    "app"
]

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1.17.0", features = ["full"] }
serde_derive = "1.0.136"
anyhow = "1.0.55"
clap = { version = "3.2.8", features = ["derive", "unstable-v4"] }
env_logger = "0.9.0"
log = "0.4.17"
utils = {path= "libs/utils"}
app = {path="app"}
colored = "2.0.0"
