[package]
name = "vnstat-server"
version = "1.0.0-beta.0"
edition = "2021"
authors = ["Mohamed Emad (hulxxv@gmail.com)"]
description = "Serve your vnStat data and controlling in it easily by HTTP requests" 
default-run = "vns"
[workspace] 
members = [
    "vns",
    "vnsd",
    "libs/libvnstat",
    "libs/utils",
    "app"
]



[[bin]]
name = "vnsd"
path = "vnsd/src/main.rs"

[[bin]]
name = "vns"
path = "vns/src/main.rs"


[dependencies]
utils = {path = "libs/utils"}
libvnstat = {path = "libs/libvnstat"}
app = {path = "app"}
vns = {path = "vns"}
vnsd = {path = "vnsd"}

serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.136"
erased-serde = "0.3.20"

tokio = { version = "1.17.0", features = ["full"] }
actix-server = "2.1.1"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"

anyhow = "1.0.55"
clap = { version = "3.2.8", features = ["derive"] }

env_logger = "0.9.0"
log = "0.4.17"


diesel = { version = "1.4.8", features = ["sqlite"] }
dirs = "4.0.0"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.19"
rand = "0.8.5"
regex = "1.6.0"

colored = "2.0.0"
comfy-table = "6.0.0"


