[package]
name = "vnstat-server"
version = "1.0.0-stable"
edition = "2021"
authors = ["Mohamed Emad (hulxxv@gmail.com)"]
description = "Serve your vnStat data and controlling in it easily by HTTP requests" 
default-run = "vns"
readme = "README.md" 
[workspace] 
members = [
    "vns",
    "vnsd",
    "libs/libvnstat",
    "libs/utils",
    "app"
]



[[bin]]
name = "vnsd"
path = "vnsd/src/main.rs"

[[bin]]
name = "vns"
path = "vns/src/main.rs"


[dependencies]
utils = {path = "libs/utils"}
libvnstat = {path = "libs/libvnstat"}
app = {path = "app"}
vns = {path = "vns"}
vnsd = {path = "vnsd"}

serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.136"
erased-serde = "0.3.20"

tokio = { version = "1.17.0", features = ["full"] }
actix-server = "2.1.1"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"

anyhow = "1.0.55"
clap = { version = "3.2.8", features = ["derive"] }

env_logger = "0.9.0"
log = "0.4.17"


diesel = { version = "1.4.8", features = ["sqlite"] }
dirs = "4.0.0"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.19"
rand = "0.8.5"
regex = "1.6.0"
comfy-table = "6.0.0"
colorful = "0.2.1"


[package.metadata.deb]
maintainer = "Hulxxv <hulxxv@gmail.com>"
copyright = "2022, Mohamed Emad <hulxxv@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Serve your vnStat data and controlling in it easily by HTTP requests"
depends = "$auto, vnstat"
section = "Network"
priority = "optional"
assets = [
    ["target/release/vns", "usr/bin/", "755"],
    ["target/release/vnsd", "usr/bin/", "755"],
    ["docs/*", "usr/share/vnstat-server/docs/", "755"],
    ["README.md", "usr/share/vnstat-server/", "644"],
    ["LICENSE", "usr/share/vnstat-server/", "644"],
    ["systemd/vnstat-server.service", "/etc/systemd/system/vnstat-server.service", "644"]

]
