[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Emad (hulxxv@gmail.com)"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
anyhow = "1.0.55"
toml = "0.5.8"
serde_derive = "1.0.136"
dirs = "4.0.0"
serde = { version = "1.0.13", features = ["derive"] }
utils = {path="../libs/utils"}
colored = "2.0.0"
derivative = "2.2.0"
