[package]
name = "vnsd"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Emad (hulxxv@gmail.com)"]
description = "vnStat Server daemon"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0.59"
erased-serde = "0.3.20"
tokio = { version = "1.17.0", features = ["full"] }
actix-server = "2.1.1"
actix-web = "4.0.1"
serde_derive = "1.0.136"
anyhow = "1.0.55"
clap = { version = "3.1.8", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
utils = {path= "../libs/utils"}
libvnstat = {path="../libs/libvnstat"}
app = {path="../app"}
daemonize = "0.4.1"
