[package]
name = "vnsd"
version = "1.0.0-stable"
edition = "2021"
authors = ["Mohamed Emad (hulxxv@gmail.com)"]
description = "vnStat Server daemon"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.136"
erased-serde = "0.3.20"

tokio = { version = "1.17.0", features = ["full"] }
actix-server = "2.1.1"
actix-web = "4.0.1"
actix-web-httpauth = "0.6.0"

anyhow = "1.0.55"
clap = { version = "3.2.8", features = ["derive"] }

env_logger = "0.9.0"
log = "0.4.17"

utils = {path= "../libs/utils"}
libvnstat = {path="../libs/libvnstat"}
app = {path="../app"}

diesel = { version = "1.4.8", features = ["sqlite"] }
dirs = "4.0.0"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.19"
rand = "0.8.5"
regex = "1.6.0"
