[package]
name = "libvnstat"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Emad (hulxxv@gmail.com)"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
diesel = { version = "1.4.8", default-features = false, features = ["sqlite"] }
anyhow = "1.0.55"
serde = { version = "1.0.13", features = ["derive"] }
app = {path="../../app"}