[package]
name = "utils"
version = "0.1.0"
edition = "2021"

authors = ["Mohamed Emad (hulxxv@gmail.com)"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
regex = "1.5.5"
tokio = { version = "1.17.0", features = ["full"] }
log = "0.4.17"